solve problem footer on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,8 +27,10 @@ nav a:last-child {
    background-color: violet;
    color: #120a0f;
    border-radius: 15px 15px 15px 15px;
-   height: 10px;
+   padding: 20px;
    text-align: center;
+   display: inline-block;
+   line-height: .5;
 }
 
 #contact {
@@ -71,7 +73,6 @@ nav a:last-child {
    flex-direction: column;
    justify-content: center;
    align-items: center;
-  
 }
 
 #me {
@@ -90,9 +91,14 @@ nav a:last-child {
    margin-left: 30px;
 }
 
-@media (max-width: 768px) {
+img {
+   width: 300px; /* Ajusta el ancho del círculo */
+   height: 300px; /* Ajusta la altura del círculo */
+   border-radius: 50%;
+   margin-left: 250px;
+}
 
-   
+@media (max-width: 1000px) {   
 
   body {
    display: flex;
@@ -103,11 +109,13 @@ nav a:last-child {
   img{
    width: 30%;
    height: auto;
+   margin: auto;
   }
   
   #contact {
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
+   height: 1000px;
   }
 
   header{
@@ -116,7 +124,7 @@ nav a:last-child {
    align-items: center;
   }
 
-  #me{
+  #me, #content-boxes{
    display: flex;
    flex-direction: column;
  }
